Fix conversions and use .valueOf instead of creating new number instances