@@ -38,7 +38,7 @@ public class FloatConverter
     { return (Float) value;
     }
     else if (value instanceof Number)
-    { return new Float(((Number) value).floatValue());
+    { return Float.valueOf(((Number) value).floatValue());
     }
 		else if (value instanceof String)
 		{ return Float.valueOf((String) value);
